# ViewTether

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  LICENSE.md  README.md  ScreenCapture.sln  ViewTether.sln  main.cpp
ScreenCapture/: App.cpp  App.h  DisplayStreamServer.cpp  DisplayStreamServer.h  DriverHelper.cpp  DriverHelper.h  MainWindow.ui  ScreenCapture.cpp  ScreenCapture.qtvscr  ScreenCapture.vcxproj  ScreenCapture.vcxproj.filters  ScreenDupliactor.cpp  ScreenDupliactor.h  StreamCodec.cpp  StreamCodec.h  Test.cpp  Test.h  VIdeoWidget.h  main.cpp  miscHelpers.h  test.pgm  ui_MainWindow.h
ScreenCapture/FFmpeg-libs/installed/include/: x264.h  x264_config.h
ScreenCapture/FFmpeg-libs/installed/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  libx264.lib  pkgconf.lib  swresample.lib  swscale.lib
ScreenCapture/FFmpeg-libs/installed/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpkgconf.pc  libswresample.pc  libswscale.pc  x264.pc  x265.pc
ScreenCapture/x64/Debug/: ScreenCapture.exe.recipe  ScreenCapture.ilk  vc143.idb
ScreenCapture/x64/Debug/ScreenCapture.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ScreenCapture.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ViewTether/: App.cpp  App.h  DisplayStreamServer.cpp  DriverHelper.h  ScreenCapture.vcxproj  ScreenCapture.vcxproj.filters  ScreenDupliactor.cpp  ScreenDupliactor.h  main.cpp  ui_MainWindow.h
ViewTether/include/: App.h  MainWindow.ui  ScreenDupliactor.h  StreamCodec.h  StreamEncoder.h  VIdeoWidget.h
ViewTether/include/Helpers/: VirtualScreenDriverHelper.h
ViewTether/include/ScreenCapture/: DXGIScreenCapture.h  DisplayInformation.h  ScreenCapture.h
ViewTether/include/StreamServer/: TCPStreamServer.h
ViewTether/src/: App.cpp  DriverHelper.cpp  ScreenDupliactor.cpp  StreamCodec.cpp  StreamEncoder.cpp
ViewTether/src/Helpers/: VirtualScreenDriverHelper.cpp
ViewTether/src/ScreenCapture/: DXGIScreenCapture.cpp
ViewTether/src/StreamServer/: TCPStreamServer.cpp
enc_temp_folder/3996670af1f2ecf29411b25b50138c/: ScreenCapture.cpp
profiler/: Only DXGI.diagsession
